2007-04-17  noedler

	wdfs, 1.4.2

2007-04-17  noedler

	- fixed a stupid bug that avoids mounting the root of a server
	- documented the optional port for mounting a webdav server
	- improved attribute caching for some special cases

2007-02-05  noedler

	- wdfs, 1.4.1
	- updated README
	- added redirect handling for rename() and unlink(). thanks joseph!

2007-01-25  noedler

	compile fix for mac os x: define strndup() for apple computers

2007-01-24  noedler

	fixed mounting a webdav share that redirects (e.g.) from '/foo' to '/foo/'. thanks to joseph dunn for the patch.

2007-01-19  noedler

	wdfs, 1.4.0

2007-01-14  noedler

	enable http redirect support by default and add option "no_redirect" to disable it

2007-01-14  noedler

	coding style...

2007-01-13  noedler

	- updated copyright to 2007
	- added dummy impl of wdfs_init()
	- updated README with an example how to mount wdfs thru fstab

2007-01-13  noedler

	updated README file

2006-11-13  noedler

	added a dummy implementation for statfs()

2006-11-09  noedler

	fixed a bug in the assert statements, thanks sven bachmann for pointing it out!

2006-10-27  noedler

	fixed creating the ChangeLog

2006-10-27  noedler

	Initial commit for the public SVN

2006-10-17  jens m. noedler  <noedler@web.de>

	- introduced unify_path() which does the escaping/unescaping
	  the remotepath in one place
	- added checks for the return value of remove_ending_slash()
	- new: remotepath_basedir may contain special chars
	- some random coding style improvements

2006-10-17  jens m. noedler  <noedler@web.de>

	improvement: return -EPERM instead of -ENOENT if deleting fails
	with "403 Forbidden". patch from joseph.dunn@colorado.edu

2006-10-16  jens m. noedler  <noedler@web.de>

	just some random coding style improvements

2006-10-14  jens m. noedler  <noedler@web.de>

	- fixed parsing of "-o accept_sslcert" parameter
	- added check of "-o locking_timeout" parameter

2006-10-14  jens m. noedler  <noedler@web.de>
